tests/src/test/resources/scala/tools/nsc/effects/io/LazyByNameRepeatedDefaultsSuite-files/lazyByNameRepeatedDefaultNeg.check
newSource:4: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t1: Int @pure = new LazyFals().z
                                     ^
newSource:5: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t2: Int @pure = new LazyFals().flam()
                                         ^
newSource:6: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t3: Int @pure = f00R({println(); 1})
                          ^
newSource:10: error: effect type mismatch;
 found   : @io
 required: @noIo
    x
    ^
newSource:35: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t2: Int @pure = fap()
                      ^
newSource:36: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t3: Int @pure = fup()
                      ^
newSource:30: error: effect type mismatch;
 found   : @io
 required: @noIo
  def fip(x: Int @pure = {println(); 1} ) = x
                                 ^
newSource:42: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t1: Int @pure = huh(1,2,3,{println();1})
                                        ^
newSource:45: error: effect type mismatch;
 found   : @io
 required: @noIo
  def t2: Int @pure = hoh(1,2,3)(x => {println(); x + 1})
                                ^
